--- a/app/templates/file.hbs
+++ b/app/templates/file.hbs
@@ -1,2 +1,16 @@
-{{model.foo}}
+Browsing {{model.path}}:
+{{log model}}
+{{#each model.files as |file|}}
+  <div class="file">
+    {{#link-to 'file' file.path}}
+      {{file.path}}
+    {{/link-to}}
+  </div>
+{{/each}}
+
+{{#link-to 'file' model.parent}}
+  {{log model.parent}}
+  {{model.parent}}
+{{/link-to}}
+
 {{outlet}}
