--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,33 @@
-{{outlet}}
+{{#paper-nav-container open=drawerOpen classNames="ember-app"}}
+
+  {{#paper-sidenav classNames="md-sidenav-left md-whiteframe-z2" flex-layout="column" flex=true}}
+
+    {{#paper-toolbar}}
+      <div class="md-toolbar-tools">
+        <div class="logo">
+          <strong>{{paper-icon icon="adjust"}} Davros File Storage</strong>
+        </div>
+      </div>
+    {{/paper-toolbar}}
+
+    {{#paper-content}}
+      {{#paper-list}}
+        {{#paper-item action="transitionTo" param="files"}}
+          {{paper-icon icon="folder"}}
+          Files
+        {{/paper-item}}
+
+        {{#paper-item action="transitionTo" param="clients"}}
+          {{paper-icon icon="desktop-mac"}}
+          Clients
+        {{/paper-item}}
+      {{/paper-list}}
+    {{/paper-content}}
+
+  {{/paper-sidenav}}
+
+  {{#paper-content flex-layout="column" flex=true}}
+    {{outlet}}
+  {{/paper-content}}
+
+{{/paper-nav-container}}
