--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -1,1 +1,39 @@
-{{outlet}}
+{{#paper-toolbar}}
+  <div class="md-toolbar-tools">
+    Files in
+    {{path-breadcrumb path=model.path}}
+    /
+    {{#if model.name}}
+      {{model.name}} /
+    {{/if}}
+  </div>
+{{/paper-toolbar}}
+
+{{#paper-list class="file-list"}}
+  {{#paper-item}}
+    {{paper-icon icon="folder"}}
+
+    <p>
+      {{#link-to 'file' model.parent}}
+        ..
+      {{/link-to}}
+    </p>
+  {{/paper-item}}
+
+  {{#each model.sortedFiles as |file|}}
+    {{#paper-item}}
+      {{#if file.isDirectory}}
+        {{paper-icon icon="folder"}}
+      {{else}}
+        {{paper-icon icon=file.type}}
+      {{/if}}
+
+      <p>
+        {{#link-to 'file' file.path}}
+          {{file.name}}
+        {{/link-to}}
+      </p>
+    {{/paper-item}}
+  {{/each}}
+
+{{/paper-list}}
