add plupload for uploading new files

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -44,3 +44,7 @@ md-sidenav {
 md-list.file-list md-list-item:nth-child(even) {
   background-color: #F5F5F5;
 }
+
+#upload-file {
+  margin-left: auto;
+}
