--- a/app/templates/file.hbs
+++ b/app/templates/file.hbs
@@ -3,6 +3,8 @@
     Viewing
     {{path-breadcrumb path=model.path}}
     / {{model.name}}
+
+    {{partial 'file-upload'}}
   </div>
 {{/paper-toolbar}}
 
