--- a/app/templates/components/path-breadcrumb.hbs
+++ b/app/templates/components/path-breadcrumb.hbs
@@ -1,3 +1,5 @@
+{{#link-to 'file' ''}}home{{/link-to}}
+
 {{#each parts as |part|}}
   <span class="separator">/</span>
   {{#link-to 'file' part.path}}{{part.name}}{{/link-to}}
