--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,7 +2,7 @@ $primary: "blue" !default;
 
 @import 'ember-paper';
 
-body {
+body, #content {
   background-color: #f3f3f3;
 }
 
@@ -43,6 +43,39 @@ md-sidenav {
 
 .file-list {
   background-color: #f3f3f3;
+  display: block;
+  border-collapse: collapse;
+
+  tbody {
+    display: block;
+  }
+
+  td,th {
+    padding: 12px 16px;
+    text-align: left
+  }
+
+  td,th {
+    vertical-align: top;
+
+    &.name {
+      width: 100%;
+      padding-left: 35px !important;
+    }
+
+    &.size {
+      min-width: 50px;
+      padding-right: 35px !important;
+    }
+  }
+
+  td.size {
+    text-align: right;
+  }
+
+  tr:nth-child(even) {
+    background-color: #F7F7F7;
+  }
 }
 
 .file-list md-list-item:nth-child(even) {
