show absolute update time on hover

--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -35,7 +35,7 @@
           {{/link-to}}
         </td>
 
-        <td class="updated">
+        <td class="updated" title="{{file.mtime}}">
           {{moment-from-now file.mtime interval=5000}}
         </td>
 
