cleaner looking updated times

--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -36,7 +36,7 @@
         </td>
 
         <td class="updated" title="{{file.mtime}}">
-          {{moment-from-now file.mtime interval=5000}}
+          {{moment-from-now file.mtime interval=5000 hideSuffix=true}}
         </td>
 
         <td class="size">
