--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -27,7 +27,7 @@
           {{#if file.isDirectory}}
             {{paper-icon icon="folder"}}
           {{else}}
-            {{paper-icon icon=file.type}}
+            {{paper-icon icon=file.typeIcon}}
           {{/if}}
 
           {{file.name}}
