--- a/app/templates/file.hbs
+++ b/app/templates/file.hbs
@@ -8,8 +8,6 @@
   </div>
 {{/paper-toolbar}}
 
-<div class="file">
-  {{component model.typeComponent model=model}}
-</div>
+{{component model.typeComponent model=model class="file-display"}}
 
 {{outlet}}
