--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -201,3 +201,60 @@ md-sidenav {
     }
   }
 }
+
+.clients {
+  .client-download {
+    text-align: center;
+  }
+
+  .server-url {
+    text-align: center;
+
+    iframe {
+      margin: 20px auto;
+      width: 95%;
+      max-width: 1100px;
+      border: 1px solid #000;
+      padding: 3px;
+      height: 1.2em;
+      background-color: #FFF;
+    }
+  }
+
+  .authentication {
+    width: 510px;
+    margin: auto;
+    padding: 20px 0;
+
+    .username-field, .password-field {
+      margin-bottom: 10px;
+      height: 2em;
+    }
+
+    label {
+      width: 90px;
+      text-align: right;
+      float: left;
+      line-height: 1.7em;
+      padding-right: 4px;
+    }
+
+    .username, .password {
+      float: left;
+      width: 400px;
+    }
+
+    .username pre {
+      padding: 0 0 2px 0;
+      margin: 0;
+    }
+
+    .username, .password iframe {
+      border: 1px solid #000;
+      padding: 3px;
+      height: 1.2em;
+      width: 400px;
+      background-color: #FFF;
+    }
+  }
+}
