--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -1,6 +1,8 @@
 {{#paper-toolbar}}
   <div class="md-toolbar-tools">
     Desktop and Mobile Clients
+
+    <div class="file-upload"></div>
   </div>
 {{/paper-toolbar}}
 
