add error routes

--- a/app/templates/not-found.hbs
+++ b/app/templates/not-found.hbs
@@ -9,5 +9,5 @@
 {{#paper-content class="notfound" flex-layout="column" flex=true}}
   <div class="huge">404 Not Found</div>
 
-  <div class="description">We couldn't find this page. Please make sure you typed it correctly.</div>
+  <div class="description">We couldn't find this page. Please check the URL to make sure it is correct.</div>
 {{/paper-content}}
