don't append the api token to the webdav url; it shows up too prominently in the desktop client

--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -24,7 +24,7 @@
 
     Start the client. In the <strong>Server Name</strong> field, use this value:
     <div class="server-url">
-      {{offer-iframe template="$API_PROTO//sandstorm:$API_TOKEN@$API_HOST/#$API_TOKEN"}}
+      {{offer-iframe template="$API_PROTO//sandstorm:$API_TOKEN@$API_HOST/"}}
     </div>
 
     On the <strong>Enter user credentials</strong> step, use:
