--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -2,7 +2,7 @@
   <div class="md-toolbar-tools">
     Desktop and Mobile Clients
 
-    <div class="file-upload"></div>
+    <div id="upload-file"></div>
   </div>
 {{/paper-toolbar}}
 
