--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -130,12 +130,9 @@ md-sidenav {
 
   padding: 10px;
 
-  .meta, .preview {
+  .meta {
     flex-grow: 1;
     flex-basis: 200px;
-  }
-
-  .meta {
     margin-right: 2em;
     text-align: right;
     width: 320px;
@@ -169,9 +166,8 @@ md-sidenav {
     width: 320px;
     height: 200px;
     flex-basis: 200px;
-    flex-grow: 1;
+    flex-grow: 3;
     flex-shrink: 0;
-    min-height: 600px;
 
     display: flex;
     align-items: center;
@@ -184,13 +180,25 @@ md-sidenav {
     }
 
     img {
-      width: 100%;
+      max-width: 100%;
       max-height: 100%;
+      margin: auto;
     }
 
     video {
       width: 100%;
       max-height: 100%;
+    }
+
+    .markdown {
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: #FFF;
+
+      .inner {
+        padding: 10px;
+      }
     }
   }
 }
@@ -271,5 +279,8 @@ md-sidenav {
 }
 
 .file-actions {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 250px;
 }
