--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -284,3 +284,41 @@ md-sidenav {
   left: 0;
   width: 250px;
 }
+
+.publishing {
+  background-color: #f3f3f3 !important;
+
+  .toggle-publishing {
+    margin: 20px 0;
+    text-align: center;
+  }
+
+  .auto-url {
+    font-weight: bold;
+    background-color: #FFF;
+    padding: 20px 10px;
+    margin: 20px 0;
+    text-align: center;
+  }
+
+  .dns-setup {
+    .setup, .records {
+      width: 50%;
+      float: left;
+    }
+
+    .setup .inner {
+      padding-right: 10px;
+    }
+
+    .records .inner {
+      padding-left: 10px;
+    }
+
+    pre {
+      background-color: #FFF;
+      max-width: 800px;
+      padding: 20px 0;
+    }
+  }
+}
