fix uploads breaking when switching between routes

--- a/app/templates/file-upload.hbs
+++ b/app/templates/file-upload.hbs
@@ -1,1 +1,3 @@
-{{#paper-button id="upload-file"}}Upload{{/paper-button}}
+<div class="upload">
+  {{#paper-button id="upload-file"}}Upload{{/paper-button}}
+</div>
