--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -93,6 +93,18 @@ md-sidenav {
   background-color: #F5F5F5;
 }
 
+.upload {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 10;
+
+  button {
+    background-color: transparent;
+    color: #FFF;
+  }
+}
+
 #upload-file {
   margin-left: auto;
 }
