--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,11 +4,13 @@
       {{paper-progress-linear warn=true value=queue.progress}}
     </div>
   {{/if}}
+
+  {{partial 'file-upload'}}
 {{/pl-uploader}}
 
 {{#paper-nav-container open=drawerOpen classNames="ember-app"}}
 
-  {{#paper-sidenav classNames="md-sidenav-left md-whiteframe-z2" flex-layout="column" flex=true}}
+  {{#paper-sidenav classNames="md-sidenav-left md-whiteframe-z2" flex-layout="column" flex=true locked-open="gt-sm"}}
 
     {{#paper-toolbar}}
       <div class="md-toolbar-tools">
