slightly mitigate some firefox css issues

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -35,6 +35,10 @@ md-content p.content {
 md-sidenav {
   min-height: 100vh;
   text-align: left;
+
+  md-list-item .md-list-item-inner md-icon {
+    flex: 1;
+  }
 }
 
 .material-icons {
