ensure that uploading from within directories always uploads to that directory
Unfortunately when you hit upload we only get the current path, and have trouble telling whether you're viewing a directory or a file. (ember architectural decisions which will need to be cleaned up later) So we need to ensure that directories end in a / so that we can tell them apart.

--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -21,7 +21,7 @@
   <tbody>
     {{#each model.sortedFiles as |file|}}
       <tr>
-        {{#link-to 'file' file.path class="name" tagName="td"}}
+        {{#link-to 'file' file.linkedPath class="name" tagName="td"}}
           {{#if file.isDirectory}}
             {{paper-icon icon="folder"}}
           {{else}}
