improve the mobile experience and factor title-bar into component

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,7 +10,7 @@
 
 {{#paper-nav-container open=drawerOpen classNames="ember-app"}}
 
-  {{#paper-sidenav classNames="md-sidenav-left md-whiteframe-z2" flex-layout="column" flex=true locked-open="gt-sm"}}
+  {{#paper-sidenav classNames="md-sidenav-left md-whiteframe-z2" flex-layout="column" flex=true locked-open="gt-md"}}
 
     {{#paper-toolbar}}
       <div class="md-toolbar-tools">
@@ -50,3 +50,5 @@
   {{/paper-content}}
 
 {{/paper-nav-container}}
+
+<div id="paper-wormhole"></div>
