--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -1,8 +1,6 @@
-{{#paper-toolbar}}
-  <div class="md-toolbar-tools">
-    Desktop and Mobile Clients
-  </div>
-{{/paper-toolbar}}
+{{#title-bar}}
+  Desktop and Mobile Clients
+{{/title-bar}}
 
 {{#paper-content class="clients" flex-layout="column" flex=true}}
   <p class="content">
