--- a/app/templates/file-upload.hbs
+++ b/app/templates/file-upload.hbs
@@ -1,3 +1,11 @@
 <div class="upload">
-  {{#paper-button id="upload-file"}}Upload{{/paper-button}}
+  {{#paper-button id="upload-file"}}
+    <span class="mobile">
+      {{paper-icon icon="file-upload"}}
+    </span>
+
+    <span class="full">
+      Upload
+    </span>
+    {{/paper-button}}
 </div>
