--- a/app/templates/not-found.hbs
+++ b/app/templates/not-found.hbs
@@ -1,10 +1,6 @@
-{{#paper-toolbar}}
-  <div class="md-toolbar-tools">
-    Not Found
-
-    <div id="upload-file"></div>
-  </div>
-{{/paper-toolbar}}
+{{#title-bar}}
+  Not Found
+{{/title-bar}}
 
 {{#paper-content class="notfound" flex-layout="column" flex=true}}
   <div class="huge">404 Not Found</div>
