--- a/app/templates/publishing.hbs
+++ b/app/templates/publishing.hbs
@@ -1,8 +1,6 @@
-{{#paper-toolbar}}
-  <div class="md-toolbar-tools">
-    Web Publishing
-  </div>
-{{/paper-toolbar}}
+{{#title-bar}}
+  Web Publishing
+{{/title-bar}}
 
 {{#paper-content class="publishing" flex-layout="column" flex=true}}
   <p class="content">
