--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,8 +6,24 @@ body, #content {
   background-color: #f3f3f3;
 }
 
+md-toolbar .title {
+  display: inline-block;
+  margin-right: 100px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .breadcrumb {
-  padding: 0 0.5em;
+  display: inline-block;
+
+  .full {
+    display: inline-block;
+  }
+
+  .parent-only {
+    display: none;
+  }
 
   a {
     text-decoration: underline;
@@ -71,9 +87,23 @@ md-sidenav {
       padding-left: 35px !important;
       cursor: pointer;
 
+      .filename {
+        display: table;
+        table-layout: fixed;
+        width: 100%;
+
+        .truncated {
+          overflow-x: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
+      }
+
       .paper-icon {
         color: #999;
         padding-right: 0.3em;
+        float: left;
+        display: inline-block;
       }
 
       .folder {
@@ -83,6 +113,10 @@ md-sidenav {
 
     &.updated {
       min-width: 110px;
+
+      .short {
+        display: none;
+      }
     }
 
     &.size {
@@ -90,6 +124,59 @@ md-sidenav {
       padding-right: 35px !important;
       text-align: right;
     }
+  }
+}
+
+@media (max-width: 550px) {
+  .md-toolbar-tools {
+    padding: 0 !important;
+  }
+
+  md-toolbar .title {
+    margin-right: 55px;
+  }
+
+  .upload {
+    .full { display: none !important; }
+    .mobile {
+      display: block !important;
+      md-icon { color: #FFF; }
+    }
+
+    #upload-file {
+      min-width: auto;
+      width: 48px;
+    }
+  }
+
+  .file-list {
+    td,th {
+      &.updated {
+        min-width: 50px;
+
+        .short {
+          display: block;
+        }
+
+        .long {
+          display: none;
+        }
+      }
+
+      padding: 8px 4px;
+
+      &.name {
+        padding-left: 15px !important;
+      }
+    }
+  }
+
+  .breadcrumb .full {
+    display: none;
+  }
+
+  .breadcrumb .parent-only {
+    display: inline-block;
   }
 }
 
@@ -107,6 +194,9 @@ md-sidenav {
     background-color: transparent;
     color: #FFF;
   }
+
+  .full { display: block; }
+  .mobile { display: none; }
 }
 
 #upload-file {
