--- a/app/templates/file.hbs
+++ b/app/templates/file.hbs
@@ -1,10 +1,8 @@
-{{#paper-toolbar}}
-  <div class="md-toolbar-tools">
-    Viewing
-    {{path-breadcrumb path=model.path}}
-    / {{model.name}}
-  </div>
-{{/paper-toolbar}}
+{{#title-bar}}
+  Viewing
+  {{path-breadcrumb path=model.path}}
+  {{model.name}}
+{{/title-bar}}
 
 {{component model.typeComponent model=model class="file-display"}}
 
