--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -391,6 +391,22 @@ md-sidenav {
   width: 250px;
 }
 
+.about {
+  background-color: #f3f3f3 !important;
+
+  h2 {
+    margin-top: 1.5em;
+  }
+
+  .changelog {
+    padding: 0 20px;
+
+    h1 {
+      font-size: 1em;
+    }
+  }
+}
+
 .publishing {
   background-color: #f3f3f3 !important;
 
