clearer CNAME warning

--- a/app/templates/publishing.hbs
+++ b/app/templates/publishing.hbs
@@ -36,7 +36,7 @@
 
             {{#if domainIsApex}}
               <div class="note">
-                It looks like you're using an apex domain, so CNAME won't work. You should either use www.{{domain}} or replace <code>IN&nbsp;CNAME&nbsp;{{model.host}}</code> with <code>IN&nbsp;A&nbsp;<i>(IP&nbsp;of&nbsp;{{model.host}})</i></code>. If <b>{{model.host}}</b>'s IP ever changes, you'll need to update the DNS record.
+                The CNAME configuration above only works on subdomains. You should either use www.{{domain}} or replace <code>IN&nbsp;CNAME&nbsp;{{model.host}}</code> with <code>IN&nbsp;A&nbsp;<i>(IP&nbsp;of&nbsp;{{model.host}})</i></code>. If <b>{{model.host}}</b>'s IP ever changes, you'll need to update the DNS record.
               </div>
             {{/if}}
           </div>
