--- a/app/styles/directory.scss
+++ b/app/styles/directory.scss
@@ -2,6 +2,7 @@
   background-color: #f3f3f3;
   border-collapse: collapse;
   display: block;
+  flex: 1;
 
   tbody {
     display: block;
@@ -66,6 +67,14 @@
 
 .file-list md-list-item:nth-child(even) {
   background-color: #F5F5F5;
+}
+
+.directory-actions {
+  margin-top: 3em;
+
+  .right {
+    float: right;
+  }
 }
 
 @media (max-width: 550px) {
