--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -43,11 +43,11 @@
 
         <td class="updated" title="{{file.mtime}}">
           <span class="short">
-            {{moment-from-now file.mtime interval=5000 hideSuffix=true}}
+            {{moment-from-now file.mtime locale="en-short" interval=5000 hideSuffix=true}}
           </span>
 
           <span class="long">
-            {{moment-from-now file.mtime interval=5000}}
+            {{moment-from-now file.mtime locale="en" interval=5000}}
           </span>
         </td>
 
