show directory of images as a gallery

--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -69,4 +69,8 @@
   {{#if canEdit}}
     {{#paper-button action="delete" warn=true}}{{paper-icon icon="delete"}} Delete Directory{{/paper-button}}
   {{/if}}
+
+  {{#paper-button action="slideshow"}}{{paper-icon icon="delete"}} Slideshow{{/paper-button}}
 </div>
+
+{{partial 'plugins/gallery'}}
